# public/swagger.json
@@ -217,6 +217,29 @@
 						}
 					}
 				}
+			},
+			"delete": {
+				"operationId": "DeleteReview",
+				"responses": {
+					"204": {
+						"description": "No content"
+					}
+				},
+				"tags": [
+					"Reviews"
+				],
+				"security": [],
+				"parameters": [
+					{
+						"in": "path",
+						"name": "id",
+						"required": true,
+						"schema": {
+							"format": "double",
+							"type": "number"
+						}
+					}
+				]
 			}
 		},
 		"/games": {
